--- a/.github/workflows/update-pull-request.yml
+++ b/.github/workflows/update-pull-request.yml
@@ -4,8 +4,23 @@ on:
   issue_comment:
     types:
       - created
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
+  is-dependabot:
+    name: Determine whether this pull request was opened by Dependabot
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'MetaMask/snaps' }}
+    runs-on: ubuntu-latest
+    outputs:
+      IS_DEPENDABOT: ${{ steps.is-dependabot.outputs.IS_DEPENDABOT }}
+    steps:
+      - name: Determine whether this PR was opened by Dependabot
+        id: is-dependabot
+        run: echo "IS_DEPENDABOT=true" >> "$GITHUB_OUTPUT"
+
   is-fork-pull-request:
     name: Determine whether this issue comment was on a pull request from a fork
     if: ${{ github.event.issue.pull_request && startsWith(github.event.comment.body, '@metamaskbot update-pr') }}
@@ -24,9 +39,11 @@ jobs:
   react-to-comment:
     name: React to the comment
     runs-on: ubuntu-latest
-    needs: is-fork-pull-request
+    needs:
+      - is-fork-pull-request
+      - is-dependabot
     # Early exit if this is a fork, since later steps are skipped for forks.
-    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
+    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' && needs.is-dependabot.outputs.IS_DEPENDABOT != 'true' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -46,9 +63,11 @@ jobs:
   prepare:
     name: Prepare dependencies
     runs-on: ubuntu-latest
-    needs: is-fork-pull-request
+    needs:
+      - is-fork-pull-request
+      - is-dependabot
     # Early exit if this is a fork, since later steps are skipped for forks.
-    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
+    if: ${{ needs.is-dependabot.outputs.IS_DEPENDABOT == 'true' || needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
     outputs:
       COMMIT_SHA: ${{ steps.commit-sha.outputs.COMMIT_SHA }}
     steps:
@@ -174,6 +193,7 @@ jobs:
     name: Commit result
     runs-on: ubuntu-latest
     needs:
+      - is-dependabot
       - prepare
       - dedupe-yarn-lock
       - regenerate-lavamoat-policies
@@ -203,10 +223,13 @@ jobs:
           path: yarn.lock
           key: cache-yarn-lock-${{ needs.prepare.outputs.COMMIT_SHA }}
           fail-on-cache-miss: true
+      - name: Set commit prefix
+        if: ${{ needs.is-dependabot.outputs.IS_DEPENDABOT == 'true' }}
+        run: echo "COMMIT_PREFIX='[dependabot skip] '" >> "$GITHUB_ENV"
       - name: Commit yarn.lock
         run: |
           git add yarn.lock
-          git commit -m "Deduplicate yarn.lock" || true
+          git commit -m "${COMMIT_PREFIX}Deduplicate yarn.lock" || true
       - name: Restore LavaMoat policies
         uses: actions/cache/restore@v4
         with:
@@ -216,7 +239,7 @@ jobs:
       - name: Commit LavaMoat policies
         run: |
           git add packages/snaps-execution-environments/lavamoat
-          git commit -m "Update LavaMoat policies" || true
+          git commit -m "${COMMIT_PREFIX}Update LavaMoat policies" || true
       - name: Restore examples
         uses: actions/cache/restore@v4
         with:
@@ -226,6 +249,6 @@ jobs:
       - name: Commit examples
         run: |
           git add packages/examples/packages
-          git commit -m "Update example snaps" || true
+          git commit -m "${COMMIT_PREFIX}Update example snaps" || true
       - name: Push changes
         run: git push
