--- a/packages/snaps-cli/package.json
+++ b/packages/snaps-cli/package.json
@@ -112,6 +112,7 @@
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2",
     "webpack": "^5.88.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-merge": "^5.9.0",
     "yargs": "^17.7.1"
   },
