--- a/packages/snaps-simulator/package.json
+++ b/packages/snaps-simulator/package.json
@@ -81,12 +81,12 @@
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
-    "@metamask/auto-changelog": "^3.4.4",
-    "@metamask/eslint-config": "^12.1.0",
-    "@metamask/eslint-config-browser": "^11.1.0",
-    "@metamask/eslint-config-jest": "^12.1.0",
-    "@metamask/eslint-config-nodejs": "^12.1.0",
-    "@metamask/eslint-config-typescript": "^12.1.0",
+    "@metamask/auto-changelog": "^4.1.0",
+    "@metamask/eslint-config": "^14.0.0",
+    "@metamask/eslint-config-browser": "^14.0.0",
+    "@metamask/eslint-config-jest": "^14.0.0",
+    "@metamask/eslint-config-nodejs": "^14.0.0",
+    "@metamask/eslint-config-typescript": "^14.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@redux-saga/is": "^1.1.3",
     "@redux-saga/symbols": "^1.1.3",
@@ -102,21 +102,20 @@
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
     "@types/webpack-env": "^1.18.1",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^6.21.0",
     "assert": "^2.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-jsdoc": "^41.1.2",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^9.11.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import-x": "^4.3.0",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-jsdoc": "^50.2.4",
+    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.2",
@@ -129,8 +128,8 @@
     "jest-it-up": "^2.0.0",
     "jest-silent-reporter": "^0.6.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.8",
     "process": "^0.11.10",
     "react-refresh": "^0.14.0",
     "readable-stream": "^3.6.2",
@@ -142,7 +141,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "~5.3.3",
-    "webpack": "^5.88.0",
+    "typescript-eslint": "^8.6.0",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
